home: improve styling

--- a/templates/fragments/header.gohtml
+++ b/templates/fragments/header.gohtml
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Uptime</title>
+        <link rel="stylesheet" href="{{assets "vendors/bootstrap.min.css"}}">
         <link rel="stylesheet" href="{{assets "main.css"}}">
     </head>
     <body>
