--- a/templates/error.gohtml
+++ b/templates/error.gohtml
@@ -1,7 +1,7 @@
 {{template "header"}}
 
 <div class="container">
-    <h1>Uptime, Page not found</h1>
+    <h1 class="mt-4">Uptime, {{.Code}}: {{.Title}}</h1>
 
     <div>
         <a href="/">Go back home</a>
