--- a/static/main.css
+++ b/static/main.css
@@ -2,8 +2,26 @@ body {
     font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Helvetica Neue", "Lucida Grande", sans-serif;
 }
 
-.container {
-    padding: 0 20px;
-    max-width: 1280px;
-    margin: 0 auto;
+.header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+    border-bottom: 1px solid currentColor;
+    padding: 1rem 0;
+    margin-bottom: 2rem;
+}
+
+.logo {
+    font-size: 2.2rem;
+    font-weight: bold;
+}
+
+.link {
+    color: currentColor;
+    text-decoration: none;
+}
+.link:hover,
+.link:focus {
+    text-decoration: underline;
 }
