--- a/templates/fragments/header.gohtml
+++ b/templates/fragments/header.gohtml
@@ -1,6 +1,6 @@
 {{define "header"}}
     <!DOCTYPE html>
-    <html lang="en">
+    <html lang="en" data-bs-theme="dark">
     <head>
         <meta charset="UTF-8">
         <title>Uptime</title>
@@ -8,4 +8,26 @@
         <link rel="stylesheet" href="{{assets "main.css"}}">
     </head>
     <body>
+
+    <header class="container">
+        <div class="header">
+            <div style="width:40px;height:40px;">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 150">
+                    <ellipse style="stroke: currentColor; stroke-width: 6px; fill: transparent;" cx="74.535" cy="74.951" rx="70.379" ry="70.379"></ellipse>
+                    <path style="stroke: currentColor; fill: currentColor" d="M 21.131 116.132 L 21.652 97.322 L 33.011 97.358 L 33.256 134.357 L 21.131 116.132 Z"></path>
+                    <path style="stroke: currentColor; fill: currentColor" d="M 42.494 137.633 L 42.215 86.883 L 56.199 86.312 L 56.122 143.397 L 42.494 137.633 Z"></path>
+                    <path style="stroke: currentColor; fill: currentColor" d="M 66.459 145.534 L 65.782 72.759 L 81.476 72.015 L 80.794 145.834 L 66.459 145.534 Z"></path>
+                    <path style="stroke: currentColor; fill: currentColor" d="M 93.745 144.237 L 93.527 59.505 L 106.478 60.312 L 106.458 138.361 L 93.745 144.237 Z"></path>
+                    <path style="stroke: currentColor; fill: currentColor" d="M 117.919 129.185 L 118.62 51.387 L 128.867 51.387 L 130.205 120.757 L 117.919 129.185 Z"></path>
+                    <path d="M 217.055 225.65 H 278.877 L 278.877 218.242 L 300.043 227.238 L 278.877 236.233 L 278.877 228.825 H 217.055 V 225.65 Z" style="stroke: currentColor; fill: currentColor" transform="matrix(0.882478, -0.470354, 0.470354, 0.882478, -273.84137, -28.365582)"></path>
+                </svg>
+            </div>
+            <div style="flex-grow: 1">
+                <div class="logo">Uptime</div>
+            </div>
+            <nav>
+                <a href="/" class="link">Dashboard</a>
+            </nav>
+        </div>
+    </header>
 {{end}}
