--- a/templates/fragments/header.gohtml
+++ b/templates/fragments/header.gohtml
@@ -7,6 +7,16 @@
         <style>html{background:#212529;}</style>
         <link rel="stylesheet" href="{{assets "vendors/bootstrap.min.css"}}">
         <link rel="stylesheet" href="{{assets "main.css"}}">
+        <script src="https://unpkg.com/htmx.org@2.0.2"></script>
+        <script>
+            htmx.config.responseHandling = [
+                {code:"204", swap: false},   // 204 - No Content by default does nothing, but is not an error
+                {code:"[23]..", swap: true}, // 200 & 300 responses are non-errors and are swapped
+                {code:"422", swap: true, error: false},
+                {code:"[45]..", swap: false, error:true}, // 400 & 500 responses are not swapped and are errors
+                {code:"...", swap: false}    // catch all for any other response code
+            ];
+        </script>
     </head>
     <body>
 
