change dashboard to table view. add last status code to dashboard

--- a/templates/fragments/header.gohtml
+++ b/templates/fragments/header.gohtml
@@ -34,7 +34,7 @@
                 </svg>
             </div>
             <div style="flex-grow: 1">
-                <div class="logo">Uptime</div>
+                <div class="logo"><a href="/" style="text-decoration: none;color: #fff;">Uptime</a></div>
             </div>
             <nav>
                 <a href="/" class="link">Dashboard</a>
